// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSelectableTemplateSitewide is rendered 1`] = `
<div
  class="euiSelectable euiSelectableTemplateSitewide testClass1 testClass2 emotion-euiSelectable-euiSelectableTemplateSitewide-euiTestCss"
  data-test-subj="test subject string"
>
  <div
    class="euiPopover emotion-euiPopover-block-euiColorMode-LIGHT"
  >
    <span
      class="euiThemeProvider emotion-euiColorMode-LIGHT"
    >
      <div
        class="euiFormControlLayout emotion-euiFormControlLayout-fullWidth"
      >
        <div
          class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
          style="--euiFormControlLeftIconsCount: 1;"
        >
          <div
            class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-left"
          >
            <span
              class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="euiFormControlLayoutCustomIcon__icon"
                data-euiicon-type="search"
              />
            </span>
          </div>
          <input
            aria-activedescendant=""
            aria-describedby="generated-id_instructions"
            aria-haspopup="listbox"
            aria-label="aria-label"
            autocomplete="off"
            class="euiFieldSearch euiSelectableSearch euiSelectableTemplateSitewide__search emotion-euiFieldSearch-fullWidth"
            placeholder="Search for anything..."
            type="search"
            value=""
          />
        </div>
      </div>
      <p
        class="emotion-euiScreenReaderOnly"
        id="generated-id_instructions"
      >
         
        Use the Up and Down arrow keys to move focus over options. Press Enter to select. Press Escape to collapse options.
      </p>
    </span>
  </div>
</div>
`;

exports[`EuiSelectableTemplateSitewide props popoverButton is rendered 1`] = `
<div
  class="euiSelectable euiSelectableTemplateSitewide emotion-euiSelectable-euiSelectableTemplateSitewide"
>
  <div
    class="euiPopover emotion-euiPopover-inline-block-euiColorMode-LIGHT"
  >
    <span
      class="euiSelectableTemplateSitewide__popoverTrigger"
    >
      <button
        data-test-subj="mobilePopoverButton"
      >
        Button
      </button>
    </span>
  </div>
</div>
`;

exports[`EuiSelectableTemplateSitewide props popoverFooter is rendered 1`] = `
<div
  class="euiSelectable euiSelectableTemplateSitewide emotion-euiSelectable-euiSelectableTemplateSitewide"
>
  <div
    class="euiPopover emotion-euiPopover-block-euiColorMode-LIGHT"
  >
    <span
      class="euiThemeProvider emotion-euiColorMode-LIGHT"
    >
      <div
        class="euiFormControlLayout emotion-euiFormControlLayout-fullWidth"
      >
        <div
          class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
          style="--euiFormControlLeftIconsCount: 1;"
        >
          <div
            class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-left"
          >
            <span
              class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="euiFormControlLayoutCustomIcon__icon"
                data-euiicon-type="search"
              />
            </span>
          </div>
          <input
            aria-activedescendant=""
            aria-describedby="generated-id_instructions"
            aria-haspopup="listbox"
            aria-label="Filter options"
            autocomplete="off"
            class="euiFieldSearch euiSelectableSearch euiSelectableTemplateSitewide__search emotion-euiFieldSearch-fullWidth"
            placeholder="Search for anything..."
            type="search"
            value=""
          />
        </div>
      </div>
      <p
        class="emotion-euiScreenReaderOnly"
        id="generated-id_instructions"
      >
         
        Use the Up and Down arrow keys to move focus over options. Press Enter to select. Press Escape to collapse options.
      </p>
    </span>
  </div>
</div>
`;

exports[`EuiSelectableTemplateSitewide props popoverProps is rendered 1`] = `
<div
  class="euiSelectable euiSelectableTemplateSitewide emotion-euiSelectable-euiSelectableTemplateSitewide"
>
  <div
    class="euiPopover customPopoverClass emotion-euiPopover-block-euiColorMode-LIGHT"
  >
    <span
      class="euiThemeProvider emotion-euiColorMode-LIGHT"
    >
      <div
        class="euiFormControlLayout emotion-euiFormControlLayout-fullWidth"
      >
        <div
          class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
          style="--euiFormControlLeftIconsCount: 1;"
        >
          <div
            class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-left"
          >
            <span
              class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="euiFormControlLayoutCustomIcon__icon"
                data-euiicon-type="search"
              />
            </span>
          </div>
          <input
            aria-activedescendant=""
            aria-describedby="generated-id_instructions"
            aria-haspopup="listbox"
            aria-label="Filter options"
            autocomplete="off"
            class="euiFieldSearch euiSelectableSearch euiSelectableTemplateSitewide__search emotion-euiFieldSearch-fullWidth"
            placeholder="Search for anything..."
            type="search"
            value=""
          />
        </div>
      </div>
      <p
        class="emotion-euiScreenReaderOnly"
        id="generated-id_instructions"
      >
         
        Use the Up and Down arrow keys to move focus over options. Press Enter to select. Press Escape to collapse options.
      </p>
    </span>
  </div>
</div>
`;

exports[`EuiSelectableTemplateSitewide props popoverTitle is rendered 1`] = `
<div
  class="euiSelectable euiSelectableTemplateSitewide emotion-euiSelectable-euiSelectableTemplateSitewide"
>
  <div
    class="euiPopover emotion-euiPopover-block-euiColorMode-LIGHT"
  >
    <span
      class="euiThemeProvider emotion-euiColorMode-LIGHT"
    >
      <div
        class="euiFormControlLayout emotion-euiFormControlLayout-fullWidth"
      >
        <div
          class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
          style="--euiFormControlLeftIconsCount: 1;"
        >
          <div
            class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-left"
          >
            <span
              class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="euiFormControlLayoutCustomIcon__icon"
                data-euiicon-type="search"
              />
            </span>
          </div>
          <input
            aria-activedescendant=""
            aria-describedby="generated-id_instructions"
            aria-haspopup="listbox"
            aria-label="Filter options"
            autocomplete="off"
            class="euiFieldSearch euiSelectableSearch euiSelectableTemplateSitewide__search emotion-euiFieldSearch-fullWidth"
            placeholder="Search for anything..."
            type="search"
            value=""
          />
        </div>
      </div>
      <p
        class="emotion-euiScreenReaderOnly"
        id="generated-id_instructions"
      >
         
        Use the Up and Down arrow keys to move focus over options. Press Enter to select. Press Escape to collapse options.
      </p>
    </span>
  </div>
</div>
`;
